--- a/estudo1/index.html
+++ b/estudo1/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-<title>Estudo 1 Principais TAGs</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Estudo 1: Principais tags</title>
 </head>
-
 <body>
-<h1>Estudo 1 Principais TAGs</h1>
+    <h1>Estudo 1: Principais tags</h1>
 </body>
-
 </html>
