--- a/estudo1/index.html
+++ b/estudo1/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://www.w3schools.com/favicon.ico" type="image/x-icon">
     <title>Principais Tags</title>
 </head>
+
 <body>
     <h1>Estudo 1: Principais tags</h1>
+    <p>Estudo das Tags, <a href="tags.html">Consulte Aqui</a>. Ou <a
+            href="https://www.w3schools.com/tags/tag_doctype.asp" target="_blank">W3</a></p>
 </body>
+
 </html>
