Mudança no conteúdo.

--- a/estudo1/index.html
+++ b/estudo1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://www.w3schools.com/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://assets.website-files.com/5d5d5904f8a21bfe5ff69367/5da7e2b3990d0aab49155000_page-example.svg" type="image/x-icon">
     <title>Principais Tags</title>
 </head>
 
