Arquivo pratica 3 criado

--- a/estudo1/praticas/_base.html
+++ b/estudo1/praticas/_base.html
@@ -6,7 +6,7 @@
     <title>Prática 2 - Estrutura basica</title>
     <meta charset="utf-8">
     <meta name="author" content="Vaz">
-    <meta name="description" content="estrutura basica do html">
+    <meta name="description" content="estrutura basica do html5 e css3">
     <meta name="keywords" content="html5, css3, frontend">
 
 </head>
