Mudanças nos aquivos index e style

--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
     <!--HEADER-->
     <header id="event-description">
         <div id="disclaimer">
@@ -56,6 +57,101 @@
         </div>
     </header>
     <!--END HEADER-->
+
+    <!--SECTIONS-->
+
+    <!--SECTION #KEY-BENEFITS-->
+    <section id="key-benefits">
+        <h2>O que você vai aprender:</h2>
+        <div class="benefits">
+            <div class="benefit">
+                <div id="benefit-1" class="benefit-img"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="benefit">
+                <div id="benefit-2" class="benefit-img"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            </div>
+            <div class="benefit">
+                <div id="benefit-3" class="benefit-img"></div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit.</p>
+            </div>
+        </div>
+    </section>
+
+    <!--SECTION #LOCATION-->
+    <section id="location">
+        <div id="address">
+            <i class="bi bi-geo-alt-fill"></i>
+            <div id="address-details">
+                <p>Rua do Evento, 133</p>
+                <p>Bairro</p>
+                <p>Abertura: 14h</p>
+            </div>
+        </div>
+        <div id="about-location">
+            <h3>Local destaque</h3>
+            <p>Et, autem beatae modi quisquam quidem labore voluptates illo repellendus perspiciatis voluptatum ea
+                ipsum, deserunt aliquid provident mollitia nisi at, omnis error obcaecati. Assumenda, culpa. Aperiam
+                sint laborum, at eos atque ipsum. Dolore?</p>
+        </div>
+    </section>
+
+    <!--SECTION #DETAILS-->
+    <section id="details">
+        <div class="detail" id="detail-1">
+            <img src="img/hrz-3.jpg" alt="Sala decorada em tons claros">
+            <div class="detail-description">
+                <h3>Conheça os ambientes que você vai aprender a decorar</h3>
+            </div>
+        </div>
+
+        <div class="detail" id="detail-2">
+            <div class="detail-description">
+                <h3>Detalhes</h3>
+                <ul>
+                    <li>Posicionamento</li>
+                    <li>Aproveitamento de Espaço</li>
+                    <li>Combinação e cores</li>
+                    <li>Organização</li>
+                    <li>E muito mais...</li>
+                </ul>
+            </div>
+            <img src="img/hrz-4.jpg" alt="Sala de jantar decorada">
+        </div>
+
+        <div class="detail" id="detail-3">
+            <img src="img/hrz-5.jpg" alt="Sala decorada em tons escuros">
+            <div class="detail-description">
+                <h3>Objetos</h3>
+                <ul>
+                    <li>Cadeiras</li>
+                    <li>Mesas</li>
+                    <li>Espelhos</li>
+                    <li>Plantas</li>
+                    <li>Cortinas</li>
+                    <li>E muito mais...</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!--SECTION #CTA-->
+    <section id="cta">
+        <h3>Gostou? Então se increva:</h3>
+        <button class="btn">Solicitar Inscrição</button>
+    </section>
+    <!--END SECTIONS-->
+
+    <!--FOOTER-->
+    <footer id="footer">
+        <h3>InDecor</h3>
+        <p>A evolução da decoração e interiores</p>
+        <p><span>Entre em contato</span>oi@indecor.com.br</p>
+        <p><span>OU pelo telefone</span>+55(81)444444444</p>
+    </footer>
+    <!--END FOOTER-->
+
 </body>
 
 </html>
