--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InDecor</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
     <!--HEADER-->
     <header id="event-description">
         <div id="disclaimer">
-            <h2>InDecor</h2>
+            <h2>Portfolio</h2>
             <p class="about-event">
                 Um evento para revolucionar sua criatividade
             </p>
