Adionado JS no projeto

--- a/loginscreen/cadastro.html
+++ b/loginscreen/cadastro.html
@@ -8,8 +8,10 @@
     <title>Cadastrar</title>
     <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
     <link
         href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
@@ -26,23 +28,25 @@
                 <h1>Cadastrar</h1>
 
                 <div class='label-cad'>
-                    <input type='text' id='nome' paceholder=''>
+                    <input type='text' id='nome' paceholder='' required>
                     <label for='nome'>Nome</label>
                 </div>
 
                 <div class='label-cad'>
-                    <input type='text' id='usuario' paceholder=''>
+                    <input type='text' id='usuario' paceholder='' required>
                     <label for='usuario'>Usuario</label>
                 </div>
 
                 <div class='label-cad'>
-                    <input type='password' id='senha' paceholder=''>
+                    <input type='password' id='senha' paceholder='' required>
                     <label for='senha'>Senha</label>
+                    <i id='verSenha' class="fa fa-eye" aria-hidden="true"></i>
                 </div>
 
                 <div class='label-cad'>
-                    <input type='password' id='confirmsenha' paceholder=''>
-                    <label for='confirmsenha'>Confirma Senha</label>
+                    <input type='password' id='confirmSenha' paceholder='' required>
+                    <label for='confirmSenha'>Confirma Senha</label>
+                    <i id='verConfirmSenha' class="fa fa-eye" aria-hidden="true"></i>
                 </div>
 
                 <div class='justify-center'>
@@ -50,6 +54,7 @@
                 </div>
             </div>
         </div>
+        <script src="./js/script.js"></script>
     </body>
 </header>
 
