Projeto Eltric Cars

--- a/catalogocarros/index.html
+++ b/catalogocarros/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Carros</title>
-    <link rel="stylesheet" href="./asset/css/style.css">
+    <title>Eletric Cars</title>
+    <link rel="shortcut icon" href="assets/img/carro-eletrico.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <h1>Eletric Cars</h1>
 </body>
 </html>
