--- a/catalogocarros/index.html
+++ b/catalogocarros/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eletric Cars</title>
+    <title>Eletric Car</title>
     <link rel="shortcut icon" href="assets/img/carro-eletrico.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <h1>Eletric Cars</h1>
+    <!-- Header -->
+    <header>
+        <div class="content">
+            <!-- Menu -->
+            <nav>
+                <p class="brand">Eletric<strong>Car</strong></p>
+                <ul>
+                    <li><a href="#brands">Brands</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#companies">Companies</a></li>
+                    <button><a class="btn" href="https://www.globalcarsbrands.com/electric-car-brands/#Lucid_Motors">Saiba mais</a></button>
+                </ul>
+            </nav>
+            <!-- End Menu -->
+            <div class="header-block">
+                <div class="text">
+                    <h2>Electric Car Brands</h2>
+                    <p>List and Logos of All Electric Car Companies</p>
+                </div>
+                <img src="assets/img/car-header.png" alt="">
+            </div>
+        </div>
+    </header>
+    <!-- End Header -->
 </body>
+
 </html>
